--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>project_neon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="styles/styles.css" rel="stylesheet">
+    <script src="js/script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -16,7 +17,7 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          <a href="#" class="neon-button" id="middle">
+          <a class="neon-button middle" id="hiddenBody" onclick="removeHidden()">
             <span></span>
             <span></span>
             <span></span>
