--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          <a class="neon-button middle" id="hiddenBody" onclick="removeHidden()">
+          <a class="neon-button middle" onclick="removeHidden()">
             <span></span>
             <span></span>
             <span></span>
@@ -26,6 +26,14 @@
           </a>
         </div>
       </div>
+    </div>
+    <div class="container" id="hiddenBody">
+      	<div class="row text-center">
+          <div class="col glassmorph">
+            <h1 class="neon-text">//Div1</h1>
+            <p class="">hello</p>
+          </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
