"added glitch effect"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col">
-          <h1 class="neon center">PROJECT_NEON</h1>
+          <h1 class="neon center hero glitch layers" data-text="PROJECT_NEON"><span>PROJECT_NEON</span></h1>
         </div>
       </div>
       <div class="row">
