--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="row text-center">
-        <div class="col">
+      <div class="row text-center hero-container">
+        <div class="col environment">
           <h1 class="neon center hero glitch layers" data-text="PROJECT_NEON"><span>PROJECT_NEON</span></h1>
         </div>
       </div>
@@ -28,8 +28,8 @@
       </div>
     </div>
     <div class="container" id="hiddenBody">
-      	<div class="row text-center">
-          <div class="col glassmorph">
+      	<div class="row">
+          <div class="col text-center glassmorph">
             <h1 class="neon-text">//Div1</h1>
             <p class="">hello</p>
           </div>
