reworked initialize conten

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          <a class="neon-button middle" onclick="removeHidden()">
+          <a class="neon-button" onclick="removeHidden()">
             <span></span>
             <span></span>
             <span></span>
