--- a/index.html
+++ b/index.html
@@ -29,12 +29,20 @@
     </div>
     <div class="container" id="hiddenBody">
       	<div class="row">
-          <div class="col text-center glassmorph">
-            <h1 class="neon-text">//Div1</h1>
-            <p class="">hello</p>
+          <div class="col glassmorph">
+            <h1 class="neon-text text-center">//Div1</h1>
+            <p class="neon-text">This paragraph is neon and glowing in the dark</p>
           </div>
         </div>
     </div>
+    <div class="container revealOnScroll">
+      <div class="row">
+        <div class="col glassmorph">
+          <h1 class="neon-text text-center">//Div2</h1>
+          <p class="neon-text">This paragraph is neon and glowing in the dark</p>
+        </div>
+      </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
