--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="styles/styles.css" rel="stylesheet">
     <link href="styles/glitch.css" rel="stylesheet">
+    <script src="js/script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -67,7 +68,14 @@
         </div>
       </div>
     </div>
+    <div class="container revealOnScroll">
+      <div class="row">
+        <div class="col glassmorph">
+          <h1 class="neon-text text-center">//Div6</h1>
+          <p class="neon-text">This paragraph is neon and glowing in the dark</p>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
